--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     text-decoration:none;
 }
 .navigation-container{
-    background-color: #60a5fa;
+    background-color: #93c5fd;
     color: white;
 }
 .list-inline{
