--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }
 .navigation-container{
     background-color: #93c5fd;
-    color: white;
+    color: blacks;
 }
 .list-inline{
     display: inline;
