--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     text-decoration:none;
 }
 .navigation-container{
-    background-color: #93c5fd;
+    background-color: #0ea5e9;
     color: black;
 }
 .list-inline{
