--- a/styles.css
+++ b/styles.css
@@ -4,16 +4,15 @@
 .no-underline{
     text-decoration:none;
 }
-.navigation-container{
+.navigation{
     background-color: #0ea5e9;
     color: black;
+    padding: 1 rem;
 }
-.list-inline{
-    display: inline;
-    padding-right: 2.5rem ;
+.navigation .nav-pills{
+    text-align: right;
 }
 
-.link-tag {
+.navigation .link-tag{
     color: white;
-    text-decoration:none;
 }
