--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,10 @@ body{
     font-family: 'Roboto', sans-serif;
 }
 :root{
-    --primary-color: #0ea5e9;
+    --primary-color: #10b981;
 }
 .navigation{
-    background-color: #0ea5e9;
+    background-color: #10b981;
     color: white;
     border-bottom-left-radius: 1rem ;
 }
@@ -33,3 +33,56 @@ body{
     color: white;
     text-decoration: none;
 } 
+.hero{
+    padding: 2rem;
+   
+}
+.hero-img{
+    max-width:350px;
+    display: block;
+    margin: auto;
+   }
+   .hero-heading{
+    text-align: center;
+    color: #6b7280;
+   }
+   .hero-highlighted{
+    color: #10b981;
+   }
+.tech{
+    background-color: whitesmoke;
+    text-align: center;
+}
+.sec-link{
+    text-decoration: none;
+    color: #10b981;
+    font-weight: bold;
+
+}
+.blogs-list{
+    padding: 2rem;
+    padding-top: 2rem;
+    text-align: center;
+}
+ 
+
+
+.foot{
+    background-color:#10b981;
+    padding: 2rem;
+    text-align: center;
+border-top-right-radius: 1rem;}
+.social-link{
+list-style: none;
+}
+.socio{
+    padding-left: 0.05rem;
+}
+.list-inline-f{
+    display: inline;
+    padding-right: 1.5rem;
+    padding-bottom: 2rem;
+}
+.socio-image{
+    max-width: 70px;
+}
