--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ width: 80px;
 }
 a:hover{
     color: #84cc16;
+    transition: background-color 0.5s;
 }
 a:active{
     color: #a3e635;
@@ -103,28 +104,34 @@ a:active{
     display: grid;
    margin-left: auto;
    margin-right: auto;
-    gap: 1rem;
     width: 1200px;
+    gap: 1rem;
+   
     align-items: center;
 }
 .tech-stack-main .tech-stack{
+   
  background-color: whitesmoke;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 10px;
   width: 300px;
+  padding-left: 2rem;
+  padding-right: 2rem;
+
 }
 .tech-stack-main .tech-stack:hover{
     border-style: groove;
     border-color:#a3e635;
-    -webkit-transform: scale(1.05);
--ms-transform: scale(1.05);
-transform: scale(1.05);
+    -webkit-transform: scale(1.1);
+-ms-transform: scale(1.1);
+transform: scale(1.1);
 display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 10px;
+  border-width: thin;
 }
 .tech-stack .tech-pills{
   padding-left: 1.1rem;
