--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,47 @@
 body{
     font-family: 'Raleway', sans-serif;
 }
+
+.dark-mode {
+    background-color: black;
+    color: white;
+  }
+.dark-mode{
+    background-color: #15181f;
+    color: #e5e5e5;
+}
+.dark-mode #toggle{
+    background-color: #ffffff;
+}
+.dark-mode #toggle:after{
+    background-color: transparent;
+    box-shadow: 10px 10px #15181f;
+    top: -4px;
+    left: 30px;
+}
+  #toggle{
+    -webkit-appearance: none;
+    appearance: none;
+    height: 40px;
+    width: 75px;
+    background-color: #15181f;
+    position: absolute;
+    right: 0;
+    border-radius: 20px;
+    outline: none;
+    cursor: pointer;
+}
+#toggle:after{
+    content: "";
+    position: absolute;
+    height: 30px;
+    width: 30px;
+    background-color: #ffffff;
+    top: 5px;
+    left: 7px;
+    border-radius: 50%;
+}
+
 :root{
     --primary-color: #a3e635;
 }
@@ -18,6 +59,7 @@ body{
         }
 .navigation{    
     color: black;
+    display: inline;
     border-bottom-left-radius: 1rem ;
 }
 .navigation-container{
@@ -34,6 +76,7 @@ body{
 .navigation-container .nav-pills{
     text-align: right;
     margin-left: auto;
+    padding-left: ;
 }
 .nav-brand{
 width: 80px;
@@ -53,7 +96,7 @@ a{
 }
 a:hover{
     color: #84cc16;
-    font-weight: bold;
+    font-weight:bolder;
     transition: background-color 0.8s; 
 
 }
